; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_adda_16_di.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_adda_16_di.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_adda_16_di() #0 {
  %1 = alloca i16, align 2
  %2 = alloca i64*, align 8
  %3 = call i32 (...) @OPER_AY_DI_16()
  %4 = call signext i16 @MAKE_INT_16(i32 %3)
  store i16 %4, i16* %1, align 2
  store i64* @AX, i64** %2, align 8
  %5 = load i64*, i64** %2, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i16, i16* %1, align 2
  %8 = sext i16 %7 to i64
  %9 = add nsw i64 %6, %8
  %10 = call i64 @MASK_OUT_ABOVE_32(i64 %9)
  %11 = load i64*, i64** %2, align 8
  store i64 %10, i64* %11, align 8
  ret void
}

declare dso_local signext i16 @MAKE_INT_16(i32) #1

declare dso_local i32 @OPER_AY_DI_16(...) #1

declare dso_local i64 @MASK_OUT_ABOVE_32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
